--- a/app/src/main/res/menu/activity_home_drawer.xml
+++ b/app/src/main/res/menu/activity_home_drawer.xml
@@ -17,6 +17,24 @@
             android:icon="@drawable/ic_access_time_black_24dp"
             android:iconTint="@android:color/white"
             android:title="Orders" />
+
+        <item
+            android:id="@+id/nav_change_pwd"
+            android:icon="@drawable/ic_baseline_security_24"
+
+            android:iconTint="@android:color/white"
+            android:title="Change Password"
+
+            />
+
+        <item
+            android:id="@+id/refresh"
+            android:icon="@drawable/ic_baseline_refresh_24dp"
+            android:iconTint="@android:color/white"
+            android:title="Refresh"
+
+            />
+
         <item
             android:id="@+id/nav_log_out"
             android:icon="@drawable/ic_exit_to_app_black_24dp"
